# demoparser

./: .gitignore  ADR-007-ONLINE-AGGREGATE-ARCHIVE.md
src/csgoproto/src/: maps.rs  message_type.rs  protobuf.rs
src/node/: Cargo.toml  bench-stream-tofile.mjs  bench-write-path.mjs  index.d.ts  index.js
src/node/src/: full_pipeline.rs  lib.rs  tick_codec.rs
src/parser/: Cargo.toml
src/parser/src/: lib.rs  parse_demo.rs  tick_codec.rs  zstd_codec.rs
src/parser/src/compute_aim/: constants.rs  mod.rs  types.rs
src/parser/src/compute_events/: bomb.rs  burn_blind.rs  constants.rs  grenades.rs  helpers.rs  kills.rs  mod.rs  replay_event_chunks.rs  rounds.rs  types.rs  weapon_fire_hurt.rs
src/parser/src/compute_stats/: constants.rs  damage_stats.rs  mod.rs  ordered_map.rs  player_stats.rs  tick_aggregates.rs  tick_normalize.rs  types.rs  weapon_accuracy.rs
src/parser/src/second_pass/: collect_data.rs  entities.rs  game_events.rs  parser.rs  parser_settings.rs
src/python/: Cargo.toml
