[package]
name = "parser"
version = "0.1.1"
edition = "2021"

# Pre-existing gap in the fork (unrelated to the ADR-007 streaming patch): src/node's
# Cargo.toml depends on this crate with `features = ["voice"]`, but nothing here is actually
# gated by cfg(feature = "voice") -- voice_data collection is unconditional. Empty stub so the
# node crate's dependency resolves; not a behavior change.
[features]
voice = []

[dependencies]
bitter = "0.7.0"
prost = "0.13.3"
snap = "1.1.0"
ahash = "0.8.3"
regex = "1.7.3"
phf = "0.11.1"
phf_macros = "0.11.1"
derive_more = "0.99.17"
itertools = "0.13.0"
lazy_static = "1.4.0"
bit_reverse = "0.1.8"
memmap2 = "0.9.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
# ADR-007 §VI.2i: real Rust-side zstd for the streaming-to-file path (needs a C toolchain via
# zstd-sys -- unbuildable on this dev machine, verified via Docker's rust:bookworm instead).
zstd = "0.13"
libc = "0.2.147"
rayon = "1.7.0"
proc-macro2 = "1.0.69"
rand = "0.8.5"
bytes = "1.5.0"

[dependencies.csgoproto]
path = "../csgoproto"
[target.'cfg(not(target_env = "msvc"))'.dependencies]

# Peak-working-set measurement for the ADR-007 §VI.2 streaming prototype bin only
# (parse_stream_bench) -- not used by the library itself, doesn't affect Linux/macOS/prod builds.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_Foundation"] }

[profile.dev]
overflow-checks = false

[profile.release]
debug = true
